apps/soju/soju/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soju
  labels:
    app.kubernetes.io/name: soju
    app.kubernetes.io/instance: soju
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: soju
      app.kubernetes.io/instance: soju
  template:
    metadata:
      labels:
        app.kubernetes.io/name: soju
        app.kubernetes.io/instance: soju
    spec:
      serviceAccountName: soju
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: soju
          image: codeberg.org/emersion/soju
          ports:
            - name: ircs-u
              containerPort: 6667
              protocol: TCP
            - name: http-alt
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: soju
              mountPath: /var/lib/soju
            - name: soju-config
              mountPath: /soju-config
              subPath: soju-config
              readOnly: true
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          startupProbe:
            tcpSocket:
              port: ircs-u
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: ircs-u
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: ircs-u
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: soju-config
          secret:
            secretName: soju-config
        - name: soju
          persistentVolumeClaim:
            claimName: soju
        - name: tmp
          emptyDir: {}
  strategy:
    type: Recreate
