apps/soju/soju/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soju
  labels:
    app.kubernetes.io/name: soju
    app.kubernetes.io/instance: soju
spec:
  type: NodePort
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/name: soju
    app.kubernetes.io/instance: soju
  ports:
    - name: http-alt
      appProtocol: kubernetes.io/ws
      protocol: TCP
      port: 8080
      targetPort: http-alt
    - name: ircs-u
      appProtocol: irc
      protocol: TCP
      port: 6667
      targetPort: ircs-u
      nodePort: 30667
