apps/soju/soju/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soju
  labels:
    app.kubernetes.io/name: soju
    app.kubernetes.io/instance: soju
spec:
  parentRefs:
    - name: cilium-gateway-system
      namespace: kube-system
      port: 443
  hostnames:
    - bnc.guedescloud.com.br
  rules:
    - backendRefs:
        - name: soju
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /socket
